# cpp-rag

./: .env.sample  .gitignore  CMakeLists.txt  Doxyfile  README.md  conanfile.txt  docker-compose.yml
models/embedding/: README.md
models/llm/: README.md
src/: main.cpp
src/repositories/embedder/: EmbedderRepository.cpp  EmbedderRepository.hpp
src/repositories/llm/: LlmRepository.cpp  LlmRepository.hpp
src/repositories/vector/: VectorRepository.cpp  VectorRepository.hpp
src/services/embedder/: EmbedderService.cpp  EmbedderService.hpp
src/services/llm/: LlmService.cpp  LlmService.hpp
src/services/vector/: VectorService.cpp  VectorService.hpp
src/util/env/: EnvLoader.cpp  EnvLoader.hpp
src/util/http_client/: HttpClient.cpp  HttpClient.hpp
